@@ -92,6 +92,18 @@ More information can be found at http://wiki.typo3.org/Autoload
 The bootstrap now verifies the PHP setting register_globals is disabled for
 security reasons. The script dies otherwise.
 
+* Support of custom language fallbacks
+
+Please be aware of the fact that the content_fallback setting respects the
+already documented customizable language fallback feature like
+"sys_language_mode = content_fallback; 1,2" much more completely now.
+In general this means that you can define e.g. German as fallback language
+for a different region like e.g. Austria instead of the site-wide English
+default language. The setting is taken into account independently on page and
+content level. The latter only if related extensions are using the new
+API method "getRecordOverlayWithFallback" instead of the
+old (deprecated) "getRecordOverlay".
+
 Removed Functionality
 -------------------------------------------------------------------------------
 
